# CodeCrew

./: .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
output/: accounts.py  accounts_design.md  app.py  test_accounts.py
src/crewai_codecrew/: crew.py  main.py
src/crewai_codecrew/config/: agents.yaml  tasks.yaml
